correction bug : footer overlap le tableau

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,10 +22,11 @@ body{
 }
 
 footer {
-    position: absolute;
     bottom: 0;
-    width: 100%;
-    height: 50px;
+    height: 2em;
+    left: 0;
+    position: relative; 
+    width:100%;
 }
 
 #loading {
